# aieng-template-uv

./: .buildinfo  .gitignore  .pre-commit-config.yaml  404.html  DESIGN.md  README.md  api.html  genindex.html  index.html  mkdocs.yml  objects.inv  page.html  py-modindex.html  pyproject.toml  search.html  searchindex.js  user_guide.html
.github/: pull_request_template.md
.github/workflows/: code_checks.yml  docs.yml  docs_build.yml  docs_deploy.yml  integration_tests.yml  publish.yml  static.yml  unit_tests.yml
_modules/: aieng_template_uv.html  index.html
_modules/aieng_template_uv/: bar.html  foo.html
api/: index.html
docs/: user_guide.md
docs/overrides/partials/: copyright.html  logo.html
docs/source/: index.md  user_guide.md
docs/stylesheets/: extra.css
overrides/partials/: copyright.html
reference/api/: aieng_template_uv.bar.html  aieng_template_uv.foo.html  aieng_template_uv.html
src/aieng_template_uv/: __init__.py
tests/: conftest.py
tests/aieng_template_uv/: __init__.py
user_guide/: index.html
