[project]
name = "aieng-template-uv"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
authors = [
    { email = "andrei@nerdai.io" }
]
requires-python = ">=3.12"
dependencies = []

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[dependency-groups]
dev = [
    "pre-commit>=4.1.0",
    "pytest>=8.3.4",
]
docs = [
    "sphinx>=8.1.3",
]
